--- a/templates/create.html
+++ b/templates/create.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Add a new User</h1>
+    <a href="/">Home</a>
     <form action="/create_math" method="POST">
         <p>First Name: <input type= "text" name= "first"> </p>
         <p>Last Name: <input type= "text" name= "last"> </p>
