--- a/templates/edit.html
+++ b/templates/edit.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1>EDIT USER</h1>
+    <a href="/">Home</a> <a href="/individual/{{ user['id'] }}">Show user</a>
     <form action="/edit_math/{{ user['id'] }}" method="POST">
         <p>First Name: <input type= "text" name= "first" value="{{user['first_name']}}"> </p>
-        <p>Last Name: <input type= "text" name= "last"> </p>
-        <p>Email: <input type= "text" name= "email"> </p>
+        <p>Last Name: <input type= "text" name= "last" value="{{user['last_name']}}"> </p>
+        <p>Email: <input type= "text" name= "email" value = "{{user['email']}}"> </p>
         <button>Update</button>
     </form>
     
